--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li class="grid__item">
                 <article class="card">
                     <a href="#" class="card__image">
-                        <img src="/img/redbull.jpg" alt="redbull">
+                        <img src="img/redbull.jpg" alt="redbull">
                     </a>
                     <h3 class="card__title">
                         <a href="">Red Bull</a>
@@ -26,7 +26,7 @@
             <li class="grid__item">
                 <article class="card">
                     <a href="#" class="card__image">
-                        <img src="/img/redbull.jpg" alt="redbull">
+                        <img src="img/redbull.jpg" alt="redbull">
                     </a>
                     <h3 class="card__title">
                         <a href="">Red Bull</a>
@@ -39,7 +39,7 @@
             <li class="grid__item">
                 <article class="card">
                     <a href="#" class="card__image">
-                        <img src="/img/redbull.jpg" alt="redbull">
+                        <img src="img/redbull.jpg" alt="redbull">
                     </a>
                     <h3 class="card__title">
                         <a href="">Red Bull</a>
@@ -52,7 +52,7 @@
             <li class="grid__item">
                 <article class="card">
                     <a href="#" class="card__image">
-                        <img src="/img/redbull.jpg" alt="redbull">
+                        <img src="img/redbull.jpg" alt="redbull">
                     </a>
                     <h3 class="card__title">
                         <a href="">Red Bull</a>
@@ -65,7 +65,7 @@
             <li class="grid__item">
                 <article class="card">
                     <a href="#" class="card__image">
-                        <img src="/img/redbull.jpg" alt="redbull">
+                        <img src="img/redbull.jpg" alt="redbull">
                     </a>
                     <h3 class="card__title">
                         <a href="">Red Bull</a>
